# patronus

./: .gitignore  Cargo.toml  update_all_branch.sh
patronus/src/: mc.rs
patronus/src/expr/: context.rs
patronus/src/mc/: smt.rs
tools/coi/: Cargo.toml
tools/coi/input/: test.btor2
tools/coi/output/: out.btor2  out.ir
tools/coi/src/: main.rs
tools/verify/: Cargo.toml
tools/verify/src/: main.rs
